--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,22 +5,22 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- task: TerraformTaskV1@0
+- task: TerraformTaskV3@3
   inputs:
     provider: 'azurerm'
     command: 'init'
-    workingDirectory: '12-CI-CD-Pipelines/Azure-Devops/AKS'
+    workingDirectory: '12-CI-CD-Pipelines/Azure-DevOps/AKS'
     commandOptions: '-var="Name=$(Name)" -var="resourceGroup=$(resourceGroup)" -var="clientID=$(clientID)" -var="clientSecret=$(clientSecret)" -var="location=$(location)"'
-    backendServiceArm: 'Mike-Pay-As-You-Go (220284d2-6a19-4781-87f8-5c564ec4fec9)'
-    backendAzureRmResourceGroupName: 'Dev10'
-    backendAzureRmStorageAccountName: 'cloudskillstfstate92'
+    backendServiceArm: 'Visual Studio Enterprise Subscription(4611ca1e-866d-48a2-9c61-bb92d9be1fe9)'
+    backendAzureRmResourceGroupName: 'terraformstate-rg'
+    backendAzureRmStorageAccountName: 'terrastatestore101022'
     backendAzureRmContainerName: 'tfstate'
     backendAzureRmKey: 'tf/terraform.tfstate'
 
-- task: TerraformTaskV1@0
+- task: TerraformTaskV3@3
   inputs:
     provider: 'azurerm'
     command: 'apply'
-    workingDirectory: '12-CI-CD-Pipelines/Azure-Devops/AKS'
+    workingDirectory: '12-CI-CD-Pipelines/Azure-DevOps/AKS'
     commandOptions: '-var="Name=$(Name)" -var="resourceGroup=$(resourceGroup)" -var="clientID=$(clientID)" -var="clientSecret=$(clientSecret)" -var="location=$(location)"'
-    environmentServiceNameAzureRM: 'Mike-Pay-As-You-Go (220284d2-6a19-4781-87f8-5c564ec4fec9)'
+    environmentServiceNameAzureRM: 'Visual Studio Enterprise Subscription(4611ca1e-866d-48a2-9c61-bb92d9be1fe9)'
