--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ steps:
     backendAzureRmResourceGroupName: 'Dev10'
     backendAzureRmStorageAccountName: 'cloudskillstfstate92'
     backendAzureRmContainerName: 'tfstate'
-    backendAzureRmKey: 'tf/terraform.tfstate'
+    backendAzureRmKey: 'terraform.state'
 
 - task: TerraformTaskV1@0
   inputs:
