--- a/ADO/AKS/basic-cluster/ado-pipeline.yaml
+++ b/ADO/AKS/basic-cluster/ado-pipeline.yaml
@@ -21,6 +21,6 @@ steps:
   inputs:
     provider: 'azurerm'
     command: 'apply'
-    workingDirectory: '$(System.DefaultWorkingDirectory)/12-CI-CD-Pipelines/Azure-DevOps/AKS'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/ADO/AKS/basic-cluster'
     commandOptions: '-var="prefix=$(prefix)" -var="location=$(location)"'
     environmentServiceNameAzureRM: 'Visual Studio Enterprise Subscription(4611ca1e-866d-48a2-9c61-bb92d9be1fe9)'
